<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/sex"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_for_edit_show"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/gender"
            android:textColor="#000000"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/edit2_show_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="500dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/shape_for_edit_show"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="50sp"
            android:hint="@string/cm"/>

        <TextView
            android:id="@+id/height"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_for_edit_show"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/height"
            android:textColor="#000000"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/edit2_show_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="500dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/shape_for_edit_show"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="50sp"
            android:hint="@string/kg"/>

        <TextView
            android:id="@+id/weight"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_for_edit_show"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/weight"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/ill"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_for_edit_show"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/disease"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/edit2_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="550dp"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/complete"
            android:textColor="#548235"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/edit2_show_ill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="500dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/shape_for_edit_show"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/edit2_cancel"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="550dp"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="30dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="#548235"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/edit2_previous_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1000dp"
            android:layout_marginTop="550dp"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="30dp"
            android:text="上一頁"
            android:textAlignment="center"
            android:textColor="#548235"
            android:textSize="50sp" />

        <RadioGroup
            android:id="@+id/sex_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="650dp"
                android:layout_weight="1"
                android:text="@string/male"
                android:textSize="50sp" />

            <RadioButton
                android:id="@+id/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_weight="1"
                android:text="@string/female"
                android:textSize="50sp" />
        </RadioGroup>

    </FrameLayout>
</RelativeLayout>